[package]
name = "hn"
version = "0.4.1-rc"
authors = ["Trevor Bentley <mrmekon@gmail.com>"]
description = "Rust wrapper for the Hacker News (YCombinator) API"
keywords = ["hackernews", "news", "api"]
categories = ["api-bindings"]
homepage = "https://github.com/mrmekon/hn-rs"
repository = "https://github.com/mrmekon/hn-rs"
documentation = "https://mrmekon.github.io/hn-rs/hn/"
license = "Apache-2.0"

[dependencies]
hyper = "0.11.24"
tokio-core = "0.1.16"
futures = "0.1.14"
hyper-tls = "0.1.3"
serde = "1.0.37"
serde_json = "1.0.13"
serde_derive = "1.0.37"
time = "0.1"

[package.metadata.release]
sign-commit = false
upload-doc = true
pre-release-commit-message = "Release {{version}}"
dev-version-ext = "rc"
tag-message = "Release {{version}}"
doc-commit-message = "Release {{version}}"
